--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  .gradient {
+    @apply bg-gradient-to-r from-teal-600 via-blue-600 to-pink-600;
+  }
+  .faded-text {
+    @apply font-bold text-sm text-gray-400;
+  }
+  .divider {
+    @apply w-full h-0.5 my-6 bg-gray-800;
+  }
 }
